# sj-customer-api

./: .gitignore  Cargo.toml  README.md
_IaC/_run/: cloudfront-create.script  ec2-create.script  elb-create.script  parameter.properties  s3-create.script  waf-create.script
_IaC/attach-elb-tg/: attach-elb-tg.tf
_IaC/attach-tg-ec2/: attach-tg-ec2.tf
_IaC/create-acm-seoul-only/: create-acm-seoul-only.tf
_IaC/create-batch-compute-environment/: create-batch-compute-environment.tf
_IaC/create-cloudfront/: create-cloudfront.tf
_IaC/create-cloudfront-originrequest-policy/: create-cloudfront-originrequest-policy.tf
_IaC/create-cloudwatch-rule/: create-cloudwatch-rule.tf
_IaC/create-codedeploy-app-api/: create-codedeploy-app-api.tf
_IaC/create-codepipeline/: create-codepipeline.tf
_IaC/create-codepipeline-api/: create-codepipeline.tf
_IaC/create-ecr-api/: create-ecr-api.tf
_IaC/create-efs/: create-efs.tf
_IaC/create-eventbridge-schedule/: create-eventbridge-schedule-ecs.tf
_IaC/create-iam-policy/: create-iam-policy.tf
_IaC/create-iam-role/: create-iam-role.tf
_IaC/create-lambda/: create-lambda.tf
_IaC/create-sg/: create-sg.tf
_bash-script/: git-clone-and-autostart.sh
_python/: gather-login-users.py  pip-list.txt
_python-batch/: send_updated_users.py
config/: application.properties
python/: impact-analysis-pytorch-bert-jira-sync.py  impact-analysis-pytorch-bert-label-data.py  impact-analysis-pytorch-bert-train.py  sj-customer-gather-login-users.py
rust/: properties.rs
rust/routes/: login.rs  (+1 more)
src/: config.rs  main.rs  secret_manager.rs
(+47 files in other folders)
