[package]
name = "sungjin-customer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gcp_auth = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.8"
